Ajout du menu pour les entiers relatifs

--- a/donrep/entiers/exercicesentiers.html
+++ b/donrep/entiers/exercicesentiers.html
@@ -62,13 +62,15 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
-             <li class="dropdown"><a href=""><span>Représentation des données - Entiers</span> <i
+            <li class="dropdown"><a href=""><span>Représentation des données - nombres</span> <i
                         class="bi bi-chevron-down"></i></a>
                     <ul>
+                      <li><a href="./entiersIndex.html">Index</a> </li>
                       <li><a href="./entiers.html">Entiers</a> </li>
                       <li><a href="./tpjeumain.html">Tp jeux de mains</a></li>
                       <li><a href="./exercicesentiers.html">Exercices Entiers</a></li>
                       <li><a href="./relatif.html">Relatifs</a></li>
+                      <li><a href="../flottants/exercicesflottants.html">Exercices flottants</a></li>
                     </ul>
                   </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
