--- a/donrep/flottants/exercicesflottants.html
+++ b/donrep/flottants/exercicesflottants.html
@@ -62,6 +62,17 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
+          <li class="dropdown"><a href=""><span>Représentation des données - nombres</span> <i
+                        class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a href="../entiers/entiersIndex.html">Index</a> </li>
+                      <li><a href="../entiers/entiers.html">Entiers</a> </li>
+                      <li><a href="../entiers/tpjeumain.html">Tp jeux de mains</a></li>
+                      <li><a href="../entiers/exercicesentiers.html">Exercices Entiers</a></li>
+                      <li><a href=".../entiers/relatif.html">Relatifs</a></li>
+                      <li><a href="./exercicesflottants.html">Exercices flottants</a></li>
+                    </ul>
+                  </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
 
           <li class="dropdown"><a href="#"><span>Annexes</span> <i class="bi bi-chevron-down"></i></a>
