--- a/index.html
+++ b/index.html
@@ -56,35 +56,35 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Accueil</a></li>
-          <li class="dropdown"><a href=""><span>Constructions élémentaires</span>  <i class="bi bi-chevron-down"></i></a>
-            <ul>
-              <li><a href="./langageprog/constructions_elem/constructIndex.html">Index</a></li>
-              <li><a href="./langageprog/constructions_elem/projetjeudede.html">Projet jeu de dé</a></li>
-              <li><a href="./langageprog/constructions_elem/edi.html">Activités</a></li>
-              <li><a href="./langageprog/constructions_elem/exoconstructelem.html">Exercices</a></li>
-              <li><a href="./langageprog/constructions_elem/tpturtle.html">Dessiner avec Turtle</a></li>
-            </ul>
-          </li>
+        <li class="dropdown"><a href=""><span>Représentation des Nombres</span> <i
+                        class="bi bi-chevron-down"></i></a>
+                    <ul>
+                      <li><a href="./donrep/entiers/entiersIndex.html">Index</a> </li>
+                      <li><a href="./donrep/entiers/entiers.html">Entiers</a> </li>
+                      <li><a href="./donrep/entiers/tpjeumain.html">Tp jeux de mains</a></li>
+                      <li><a href="./donrep/entiers/exercicesentiers.html">Exercices Entiers</a></li>
+                      <li><a href="./donrep/entiers/relatif.html">Relatifs</a></li>
+                      <li><a href="./donrep/flottants/exercicesflottants.html">Exercices Relatifs</a></li>
+                    </ul>
+                  </li>
+                 
           <li class="dropdown"><a href="#"><span>Thèmes</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li class="dropdown"><a href="#"><span>Représentation des données</span> <i
                     class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li class="dropdown"><a href=""><span> Entiers</span> <i
+                  <li class="dropdown"><a href=""><span> Nombres</span> <i
                         class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <!-- <li><a href="./donrep/entiers/entiers.html">Entiers</a> </li>
+                      <li><a href="./donrep/entiers/entiersIndex.html">Index</a> </li>
+                      <li><a href="./donrep/entiers/entiers.html">Entiers</a> </li>
                       <li><a href="./donrep/entiers/tpjeumain.html">Tp jeux de mains</a></li>
                       <li><a href="./donrep/entiers/exercicesentiers.html">Exercices Entiers</a></li>
-                      <li><a href="./donrep/entiers/relatif.html">Relatifs</a></li> -->
+                      <li><a href="./donrep/entiers/relatif.html">Relatifs</a></li>
+                      <li><a href="./donrep/flottants/exercicesflottants.html">Exercices Relatifs</a></li>
                     </ul>
                   </li>
-                  <li class="dropdown"><a href=""><span>Flottants</span> <i class="bi bi-chevron-right"></i></a>
-                    <ul>
-                      <!-- <li><a href="./donrep/flottants/flottants.html">Flottants</a> </li> -->
-
-                    </ul>
-                  </li>
+                 
                   <li class="dropdown"><a href=""><span>Types construits</span> <i
                         class="bi bi-chevron-right"></i></a>
                     <ul>
