ajout de l'index du chapitre 3 bis et suppression du programme officiel

--- a/typeconstruits/parindice/puissance4.html
+++ b/typeconstruits/parindice/puissance4.html
@@ -64,6 +64,7 @@
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
           <li class="dropdown"><a href=""><span>Types construits - par indice</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              <li><a href="./typeconstruiindex.html">Index</a></li>
               <li><a href="./puissance4.html">Puissance 4</a> </li>
               <li><a href="./tuple.html">Tuple</a></li>
               <li><a href="./tableau.html">Tableau</a></li>
@@ -107,39 +108,7 @@
   </section> <!-- End Hero -->
 
   <main id="main">
-    <!-- Section programme officiel -->
-    <section class="inner-page">
-      <div class="container">
-        <h2> Programme officiel</h2>
-        <!-- <table>
-          <thead>
-            <th>
-              Contenus
-            </th>
-            <th class="padleft10px">
-              Capacités attendues
-            </th>
-        
-          </thead>
-          <tbody>
-
-            <tr>
-              <td class="padleft10px">Modèle d’architecture séquentielle (von Neumann)</td>
-              <td class="padleft10px">Distinguer les rôles et les caractéristiques des différents constituants d’une
-                machine.
-                Dérouler l’exécution d’une séquence d’instructions simples du type langage machine.
-              </td>
-            </tr>
-
-            </tr>
-          </tbody>
-        </table> -->
-
-        <p>
-
-        </p>
-      </div>
-    </section><!-- End carousel -->
+  
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="features">
       <div class="container">
