--- a/index.html
+++ b/index.html
@@ -218,18 +218,18 @@
 
                   <li class="dropdown"><a href="#"><span>Dictionnaire</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <!-- <li><a href="./donrep/dico/dico.html">Dictionnaire</a></li>
-                      <li><a href="./donrep/dico/dico.html#exos">Exercices dictionnaire</a></li> -->
+                       <li><a href="./donrep/dico/dico.html">Dictionnaire</a></li>
+                      <li><a href="./donrep/dico/dico.html#exos">Exercices dictionnaire</a></li> 
                     </ul>
                   </li>
                   <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-right"></i></a>
                     <ul>
-                      <!-- <li><a href="./dontable/dontable/importerdesdonnees.html">Importer des données</a></li>
+                      <li><a href="./dontable/dontable/importerdesdonnees.html">Importer des données</a></li>
                       <li><a href="./dontable/dontable/importerdesdonnees.html#exos">Exercices Csv</a></li>
                       <li><a href="./dontable/dontable/manipulerdonnees.html">Manipuler des données</a></li>
                       <li><a href="./dontable/dontable/manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
                       <li><a href="./dontable/dontable/projetpipotron.html">Projet</a></li>
-                      <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li> -->
+                      <li><a href="./dontable/dontable/TpPandas.html">Tp pandas</a></li> 
                     </ul>
                   </li>
                   <li class="dropdown"><a href="donrep/minetest/minetestproject.html"><span>Minetest</span> <i
