page d'index pour le traitement des données

--- a/dontable/dontable/tppandas.html
+++ b/dontable/dontable/tppandas.html
@@ -62,14 +62,18 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
+       
           <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              <li><a href="./dontableindex.html">Index</a></li>
+              <li><a href="./dontableindex.html">Dictionnaires</a></li>
               <li><a href="./importerdesdonnees.html">Importer des données</a></li>
-              <li><a href="./importerdesdonnees.html#exos">Exercices CSV</a></li>
+              <li><a href="./importerdesdonnees.html#exos">Exercices csv</a></li>
               <li><a href="./manipulerdonnees.html">Manipuler des données</a></li>
               <li><a href="./manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
               <li><a href="./projetpipotron.html">Projet</a></li>
               <li><a href="./TpPandas.html">Tp pandas</a></li>
+              <li><a href="./minetestproject.html">Minetest</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
@@ -107,39 +111,7 @@
   </section> <!-- End Hero -->
 
   <main id="main">
-    <!-- Section programme officiel -->
-    <section class="inner-page">
-      <div class="container">
-        <h2> Programme officiel</h2>
-        <!-- <table>
-          <thead>
-            <th>
-              Contenus
-            </th>
-            <th class="padleft10px">
-              Capacités attendues
-            </th>
-        
-          </thead>
-          <tbody>
-
-            <tr>
-              <td class="padleft10px">Modèle d’architecture séquentielle (von Neumann)</td>
-              <td class="padleft10px">Distinguer les rôles et les caractéristiques des différents constituants d’une
-                machine.
-                Dérouler l’exécution d’une séquence d’instructions simples du type langage machine.
-              </td>
-            </tr>
-
-            </tr>
-          </tbody>
-        </table> -->
-
-        <p>
-
-        </p>
-      </div>
-    </section><!-- End carousel -->
+   
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="features">
       <div class="container">
