Correction du menu dictionnaires défaillant

--- a/dontable/dontable/manipulerdonnees.html
+++ b/dontable/dontable/manipulerdonnees.html
@@ -65,7 +65,8 @@
           <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="./dontableindex.html">Index</a></li>
-              <li><a href="./dontableindex.html">Dictionnaires</a></li>
+              <li><a href="./dico.html">Dictionnaires</a></li>
+              <li><a href="./dico.html#exos">Exercices dictionnaire</a></li> 
               <li><a href="./importerdesdonnees.html">Importer des données</a></li>
               <li><a href="./importerdesdonnees.html#exos">Exercices csv</a></li>
               <li><a href="./manipulerdonnees.html">Manipuler des données</a></li>
