--- a/dontable/dontable/dico.html
+++ b/dontable/dontable/dico.html
@@ -64,6 +64,20 @@
         <ul>
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
        
+          <li class="dropdown"><a href="#"><span> Les données</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="./dontableindex.html">Index</a></li>
+              <li><a href="./dico.html">Dictionnaires</a></li>
+              <li><a href="./dico.html#exos">Exercices dictionnaire</a></li> 
+              <li><a href="./importerdesdonnees.html">Importer des données</a></li>
+              <li><a href="./importerdesdonnees.html#exos">Exercices csv</a></li>
+              <li><a href="./manipulerdonnees.html">Manipuler des données</a></li>
+              <li><a href="./manipulerdonnees.html#exos">Exercices Manipuler des données</a></li>
+              <li><a href="./projetpipotron.html">Projet</a></li>
+              <li><a href="./TpPandas.html">Tp pandas</a></li>
+              <li><a href="./minetestproject.html">Minetest</a></li>
+            </ul>
+          </li>
           <li><a class="nav-link scrollto" href="#resume">Résumé du cours</a></li>
           <li><a class="nav-link scrollto" href="#exos">Exercices</a></li> 
 
