nettoyage du menu

--- a/dontable/dontable/manipulerdonnees.html
+++ b/dontable/dontable/manipulerdonnees.html
@@ -257,6 +257,18 @@ fichier.close()
                 </div>
               </div>
             </div>
+           <div class="col-lg-3 col-md-6">
+            <div class="box" data-aos="zoom-in">
+              <h3>L'annexe pour les exercices </h3>
+              <ul>en zip</ul>
+
+
+              </ul>
+              <div class="btn-wrap">
+                <a target="_blank" href="ressources/exercices-table.zip" class="btn-buy">Télécharger</a>
+              </div>
+            </div>
+          </div>
           </div> 
       
         </div> 
