--- a/ihm/ihm/cssweb.html
+++ b/ihm/ihm/cssweb.html
@@ -64,6 +64,7 @@
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
           <li class="dropdown"><a href=""><span>Web</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+              <li><a href="./ihmindex.html">Index web</a></li>
               <li><a href="./principesweb.html">Principes du web</a></li>
               <li><a href="./premierepageweb.html">Première page web</a></li>
               <li><a href="./cssweb.html">Jolie page web</a></li>
@@ -71,8 +72,6 @@
             <li><a href="./flexboxetbootstrap.html">FlexBox et boostrap</a></li>
             <li><a href="./interractionsutilisateurs.html">Interractions utilisateur</a></li>
             <li><a href="./formulaires.html">Formulaires</a></li>
-             <!-- <li><a href="./responsivedesign.html">Responsive Design</a></li>   -->
-
            
             </ul>
           </li>
