--- a/ihm/ihm/premierepageweb.html
+++ b/ihm/ihm/premierepageweb.html
@@ -64,6 +64,7 @@
           <li><a class="nav-link scrollto active" href="../../index.html">Accueil</a></li>
           <li class="dropdown"><a href=""><span>Web</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
+             <li><a href="./ihmindex.html">Index web</a></li>
               <li><a href="./principesweb.html">Principes du web</a></li>
               <li><a href="./premierepageweb.html">Première page web</a></li>
               <li><a href="./cssweb.html">Jolie page web</a></li>
