--- a/ihm/ihm/formulaires.html
+++ b/ihm/ihm/formulaires.html
@@ -194,7 +194,7 @@
               <ul> sur capytale
               </ul>
               <div class="btn-wrap">
-                <a target="_blank" href="https://capytale2.ac-paris.fr/web/c/08a0-6203652" class="btn-buy"> Y aller</a>
+                <a target="_blank" href="https://capytale2.ac-paris.fr/web/c/ab2f-9716161" class="btn-buy"> Y aller</a>
               </div>
             </div>
           </div>
@@ -214,7 +214,7 @@
               <ul> 
               </ul>
               <div class="btn-wrap">
-                <a target="_blank" href="https://w3tutoriels.com/html/html-formulaires/" class="btn-buy"> Y aller</a>
+                <a target="_blank" href="https://www.w3schools.com/html/html_forms.asp" class="btn-buy"> Y aller</a>
             
               </div>
             </div>
