--- a/ihm/ihm/formulaires.html
+++ b/ihm/ihm/formulaires.html
@@ -204,7 +204,8 @@
               <ul> sur capytale
               </ul>
               <div class="btn-wrap">
-                <a target="_blank" href="https://capytale2.ac-paris.fr/web/c/08a0-6203652" class="btn-buy"> Y aller</a>
+                <a target="_blank" href="https://capytale2.ac-paris.fr/web/c/f5de-6199819" class="btn-buy"> Y aller</a>
+                
               </div>
             </div>
           </div>
